--- a/concepts/product/evaluation.mdx
+++ b/concepts/product/evaluation.mdx
@@ -24,7 +24,7 @@ You can **create**, view and manage your evaluations on the [Galtea dashboard](h
       For each [Test Case](/concepts/product/test/case), your [product](/concepts/product)'s model should be called with the [test case](/concepts/product/test/case)'s data, and its *output* should be provided to the [evaluation tasks](/concepts/product/evaluation/task).
     </Info>
   </Step>
-  <Step title="Review Results">Compare results across different versions of the same product using the [platform](https://platform.galtea.ai/)</Step>
+  <Step title="Review Results">Compare results across different versions of the same product using the [dashboard](https://platform.galtea.ai/)</Step>
 </Steps>
 
 ## Evaluation Tasks
@@ -41,7 +41,7 @@ The core components of an evaluation are its [evaluation tasks](/concepts/produc
 
 ## Results Visualization
 
-Once you've created an evaluation, you can access detailed information and results on the [platform](https://platform.galtea.ai/).
+Once you've created an evaluation, you can access detailed information and results on the [dashboard](https://platform.galtea.ai/).
 
 <Info>
   To view evaluation results, you need to visit a product's page *Analytics* section. For detailed information about a particular evaluation, you can navigate to the *Evaluations* tab and select a specific evaluation.
