--- a/concepts/product/test/quality-evolutions.mdx
+++ b/concepts/product/test/quality-evolutions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Quality Test Evolutions"
+title: "Evolutions"
 description: "Galtea platform generates variations of test cases to enhance test coverage and robustness"
 icon: ""
 ---
