--- a/concepts/product/test/red-teaming-tests.mdx
+++ b/concepts/product/test/red-teaming-tests.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Create Red Teaming Tests"
+title: "Red Teaming Tests"
 description: "Evaluate security, safety, and bias aspects of your AI products"
 icon: ""
 ---
@@ -21,7 +21,7 @@ You can create red teaming tests in Galtea through two methods:
       <Step title="Configure the test">
         Select *Red Teaming* as the test type and *Generated* as the test origin
         <Info>
-          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea platform](https://platform.galtea.ai/)
+          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea dashboard](https://platform.galtea.ai/)
         </Info>
       </Step>
       <Step title="Generate the test">
@@ -37,7 +37,7 @@ You can create red teaming tests in Galtea through two methods:
       <Step title="Configure the test">
         Select "Red Teaming" as the test type and "Uploaded" as the test origin
         <Info>
-          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea platform](https://platform.galtea.ai/)
+          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea dashboard](https://platform.galtea.ai/)
         </Info>
       </Step>
       <Step title="Upload your test file">
