--- a/concepts/product/test/red-teaming-threats.mdx
+++ b/concepts/product/test/red-teaming-threats.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Red Teaming Threats"
+title: "Threats"
 description: "Galtea platform tests the robustness of your product against multiple types of threats"
 icon: ""
 ---
