--- a/sdk/api/product/service.mdx
+++ b/sdk/api/product/service.mdx
@@ -11,7 +11,7 @@ This Service is exposed by the `galtea.products` object.
 </Info>
 
 <Note>
-  It is not supported to create product from the sdk, therefore you need to do this from the [platform](https://platform.galtea.ai/).
+  It is not supported to create product from the sdk, therefore you need to do this from the [dashboard](https://platform.galtea.ai/).
 </Note>
 
 ## SDK Methods
