--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -61,7 +61,12 @@ The [Test Cases](/concepts/product/test/case) of a Test are used in [evaluation 
 
 The Galtea SDK allows you to create, view, and manage tests programmatically.
 
-<SDKTestServiceCard />
+<CardGroup cols={2}>
+  <SDKTestServiceCard />
+  <Card title="Create a Custom Test" icon="clipboard-list" href="/sdk/examples/create-test">
+    See how to create and upload custom tests using the SDK.
+  </Card>
+</CardGroup>
 
 ## Test Properties
 
