--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -12,7 +12,7 @@ import TestCard from '/snippets/cards/test-card.mdx';
 import TestCaseCard from '/snippets/cards/test-case-card.mdx';
 import VersionCard from '/snippets/cards/version-card.mdx';
 
-This guide will walk you through the essential steps to begin evaluating and monitoring the reliability of your AI products with Galtea. Our goal is to get you to your first evaluation result as quickly as possible!
+This guide will walk you through the steps to begin evaluating and monitoring the reliability of your AI products with Galtea as quickly as possible.
 
 ## Evaluation Workflow Overview
 
@@ -29,13 +29,13 @@ Evaluating AI products with Galtea follows this pattern:
     Document a specific implementation of your product using the SDK.
   </Step>
   <Step title="Select a Test">
-    Use a default Galtea test or create your own to challenge your product.
+    Use a default Galtea test (or create your own) to challenge your product.
   </Step>
   <Step title="Select a Metric">
-    Use a default Galtea metric or define your own criteria to assess outputs.
+    Use a default Galtea metric (or define your own) to evaluate your product's version.
   </Step>
   <Step title="Run Evaluations">
-    Test your product version against the selected test and metric, then analyze results.
+    Test your product version with the selected test and metrics, then analyze results.
   </Step>
 </Steps>
 
@@ -45,34 +45,41 @@ Let's go through each step in more detail.
 
 The first step in tracking the quality and reliability of your AI product is to create a [product](/concepts/product) in the Galtea dashboard.
 
-![login to the platform](/images/login.png)
+![login to the dashboard](/images/login.png)
 
-Navigate to **[Products](https://platform.galtea.ai/) > Create New Product** and complete the product onboarding form. The product description is particularly important as it may be used during the generation of synthetic test data if you choose to create custom tests later.
+Navigate to **[Products](https://platform.galtea.ai/) > Create New Product** and complete the product onboarding form.
+
+<Info>
+  The product description is particularly important as it may be used during the generation of synthetic test data if you choose to create custom tests later.
+</Info>
 
 ![product onboarding](/images/product-onboarding.png)
 
 <Note>
-  Products can only be created through the web platform, not the SDK. For detailed information about product properties, see the [Product](/concepts/product) documentation.
+  Products can only be created through the web platform, not the SDK. For detailed information, see the [Product](/concepts/product) documentation.
 </Note>
 
 ## 2. Install the SDK and Connect
 
-After creating your product, use the [Galtea SDK](/sdk) to programmatically interact with the platform.
+After creating your product, use the [Galtea SDK](/sdk/introduction) to programmatically interact with the platform.
 
 <Steps>
   <Step title="Get your API key">
-    In the [Galtea platform](https://platform.galtea.ai/), navigate to **[Settings](https://platform.galtea.ai/settings) > Generate API Key**
+    In the [Galtea dashboard](https://platform.galtea.ai/), navigate to **[Settings](https://platform.galtea.ai/settings) > Generate API Key** and copy/save your API key.
     
     ![Get API key](/images/api-key.png)
   </Step>
   <Step title="Install the SDK">
+
+    Install the Galtea SDK using pip:
+
     ```sh
     pip install galtea
     ```
 
-    <Card title="SDK Installation Guide" icon="cube" href="/sdk/installation">
-      For detailed installation instructions and requirements
-    </Card>
+    <Note>
+      For detailed installation instructions and requirements see the [installation guide](/sdk/installation).
+    </Note>
 
   </Step>
   <Step title="Connect to the platform">
@@ -85,56 +92,50 @@ After creating your product, use the [Galtea SDK](/sdk) to programmatically inte
     # Initialize with your API key
     galtea = Galtea(api_key="YOUR_API_KEY")
     
-    # List your products to verify connection (replace with your actual Product ID later)
-    # products = galtea.products.list() 
-    # For this quickstart, you'll need your Product ID from the platform for the next steps.
-    # Example: YOUR_PRODUCT_ID = "your_actual_product_id_from_platform"
+    # List your products to verify connection
+    products = galtea.products.list() 
+    print(f"Found {len(products)} products.")
     ```
   </Step>
 </Steps>
 
 ## 3. Create a Version
 
-One of the key advantages of the [Galtea platform](https://platform.galtea.ai/) is the ability to track and compare different [versions](/concepts/product/version) of your AI product. A version captures the specific implementation details such as prompts, model parameters, or RAG configurations.
+One of the key advantages of the [Galtea dashboard](https://platform.galtea.ai/) is the ability to track and compare different [versions](/concepts/product/version) of your AI product. A version captures the specific implementation details such as prompts, model parameters, or RAG configurations.
+
+<Info>
+  You need the product ID of the product you created in Step 1. You can find it in the product's page in the [dashboard](https://platform.galtea.ai/) or by listing your products using the SDK as shown above.
+</Info>
 
 ```python
-# Ensure you have your_product_id from the Galtea platform for the product created in Step 1
-YOUR_PRODUCT_ID = "your_actual_product_id_from_platform" 
+YOUR_PRODUCT_ID = "your_actual_product_id" # Replace with your product ID
 
 version = galtea.versions.create(
-    name="v0.1-quickstart", # You can name your version
+    name="v0.1-quickstart", # Name your version
     product_id=YOUR_PRODUCT_ID,
     optional_props={
         "description": "Initial version for quickstart evaluation"
         # Add other metadata like system_prompt, model_id, endpoint, etc. as needed
     }
 )
+
 print(f"Created Version with ID: {version.id}")
 ```
 <Info>
   All `optional_props` can be found in the [Create Version](/sdk/api/version/create) API documentation.
 </Info>
 
-<Note>
-  The product's ID (`YOUR_PRODUCT_ID`) can be found in the product's page URL on the [Galtea platform](https://platform.galtea.ai/) or by [listing the products](/sdk/api/product/list) using the SDK and identifying the correct one.
-</Note>
-
 <Info>
-  You can create versions using either the SDK (as shown above) or directly through the [Galtea platform](https://platform.galtea.ai/) dashboard.
+  You can create versions using either the SDK (as shown above) or directly through the [Galtea dashboard](https://platform.galtea.ai/) by navigating to your product page and clicking on the **Versions** tab.
 </Info>
 
-<CardGroup cols={2}>
-  <Card title="Versions Concept" icon="box" href="/concepts/product/version">
-    Learn about versions in Galtea
-  </Card>
-  <Card title="Version Service API" icon="swatchbook" href="/sdk/api/version/service">
-    Learn about all version properties and management capabilities
-  </Card>
-</CardGroup>
+<Card title="Versions Concepts" icon="swatchbook" iconType="solid" href="/concepts/product/version">
+  Learn about versions in Galtea
+</Card>
 
 ## 4. Use a Default Test (or Create Your Own)
 
-To evaluate your version, you need a [test](/concepts/product/test). Galtea provides default tests to help you get started quickly. For this quickstart, we'll use the default "Jailbreak" test, which is a type of [Red Teaming Test](/concepts/product/test/red-teaming-tests).
+To evaluate your version, you need a [test](/concepts/product/test). Galtea provides default tests to help you get started quickly. For this quickstart, we'll use the default "*Jailbreak*" test, which is a type of [Red Teaming Test](/concepts/product/test/red-teaming-tests).
 
 ```python
 test = galtea.tests.get_by_name(product_id=YOUR_PRODUCT_ID, test_name="Jailbreak")
@@ -144,23 +145,25 @@ test = galtea.tests.get_by_name(product_id=YOUR_PRODUCT_ID, test_name="Jailbreak
   The "Jailbreak" test contains various prompts designed to attempt to bypass an AI's safety guardrails. This helps you assess your product's robustness against such attempts.
 </Note>
 
-If you want to define your own tests for specific knowledge (Quality Tests) or other security aspects:
+Learn more about the different types of tests Galtea supports and how to create your own tests.
 <CardGroup cols={2}>
-  <Card title="Quality Tests" icon="star" href="/concepts/product/test/quality-tests">
+  <Card title="Tests Concepts" icon="clipboard-list" iconType="solid" href="/concepts/product/test">
+    Learn about tests (and how to create them via the dashboard).
+  </Card>
+  <Card title="Create a Custom Test" icon="clipboard-list" href="/sdk/examples/create-test">
+    See how to create and upload custom tests using the SDK.
+  </Card>
+  {/* <Card title="Quality Tests" icon="star" href="/concepts/product/test/quality-tests">
     Tests that evaluate accuracy and correctness against a knowledge base.
   </Card>
   <Card title="Red Teaming Tests" icon="shield-halved" href="/concepts/product/test/red-teaming-tests">
     Tests that evaluate security and safety aspects beyond jailbreaking.
-  </Card>
+  </Card> */}
 </CardGroup>
-
-<Card title="Create a Custom Test" icon="clipboard-list" href="/sdk/examples/create-test">
-  See complete examples of creating and uploading your own tests.
-</Card>
 
 ## 5. Use a Default Metric (or Define Your Own)
 
-[Metrics](/concepts/metric-type) in Galtea define the criteria for evaluation. Galtea provides default metrics. For our "Jailbreak" test, we'll use the "Jailbreak Resistance" metric.
+[Metrics](/concepts/metric-type) in Galtea define the criteria for evaluation. Galtea provides default metrics. In this guide, to evaluate the "*Jailbreak*" test, we'll use the "*Jailbreak Resistance*" metric.
 
 ```python
 metric_jailbreak_resistance = galtea.metrics.get_by_name(name="Jailbreak Resistance")
@@ -171,21 +174,16 @@ metric_jailbreak_resistance = galtea.metrics.get_by_name(name="Jailbreak Resista
 </Note>
 
 If you need to evaluate other aspects or define custom criteria:
-<CardGroup cols={2}>
-  <Card title="Metrics Concept" icon="box" href="/concepts/metric-type">
-    Learn about metrics in Galtea
-  </Card>
-  <Card title="Metrics Service API" icon="function" href="/sdk/api/metrics/service">
-    Learn about creating and managing custom evaluation metrics.
-  </Card>
-</CardGroup>
+<Card title="Metrics Concepts" icon="function" iconType="solid" href="/concepts/metric-type">
+  Learn about metrics in Galtea
+</Card>
 
 ## 6. Run Evaluations
 
-Finally, you're ready to launch an [evaluation](/concepts/product/evaluation) to assess how well your product version performs against the test cases using the selected metric.
+Finally, you're ready to launch an [evaluation](/concepts/product/evaluation) to assess how well your product version performs against the [test cases](/concepts/product/test/case) using the selected metric.
 
 <Note>
-  For real evaluations, your AI product (`your_product_function` below) will be called with each input from the test cases. The platform will then asynchronously evaluate the responses. See [evaluation tasks](/concepts/product/evaluation/task) for more.
+  For real evaluations, your AI product (`your_product_function` below) should be called with each input from the test cases. Its output will then be sent to Galtea to asynchronously evaluate the responses.
 </Note>
 
 ```python
@@ -215,9 +213,7 @@ print(f"Found {len(test_cases)} test cases for test '{test.name}'.")
 
 # Run evaluation tasks for each test case
 for test_case in test_cases:
-    # For a Jailbreak test, retrieval_context and test_case.context might often be None or not applicable
-    # depending on the specific test case design.
-    retrieval_context_for_call = None # Adjust if your_product_function uses it for jailbreak scenarios
+    retrieval_context_for_call = None # Adjust if your_product_function uses it, e.g., for RAG
     
     actual_output = your_product_function(
         test_case.input, 
@@ -231,15 +227,24 @@ for test_case in test_cases:
         evaluation_id=evaluation.id,
         test_case_id=test_case.id,
         actual_output=actual_output,
-        # retrieval_context can be passed if relevant to the metric or your product's behavior
-        # retrieval_context=retrieval_context_for_call 
+        # retrieval_context and more can be passed if relevant to the metric or your product's behavior
     )
+
 print(f"Submitted evaluation tasks for Evaluation ID: {evaluation.id}. Results will appear on the Galtea dashboard.")
 ```
 
 <Info>
-  Evaluations can be created using either the SDK or the [Galtea platform](https://platform.galtea.ai/) dashboard, but evaluation tasks (which trigger the actual scoring) are created via the SDK.
+  Evaluations can be created using either the SDK or the [Galtea dashboard](https://platform.galtea.ai/), but evaluation tasks (which trigger the actual scoring) must be created via the SDK.
 </Info>
+
+<CardGroup cols={2}>
+  <Card title="Evaluations Concepts" icon="badge-check" iconType="solid" href="/concepts/product/evaluation">
+    Learn about evaluations.
+  </Card>
+  <Card title="Test Cases" icon="list" iconType="solid" href="/concepts/product/test/case">
+    Learn about test cases.
+  </Card>
+</CardGroup>
 
 <Card title="Run Evaluations Example" icon="badge-check" href="/sdk/examples/create-evaluation">
   See more detailed examples of running and analyzing evaluations.
@@ -247,24 +252,21 @@ print(f"Submitted evaluation tasks for Evaluation ID: {evaluation.id}. Results w
 
 ## 7. View Results
 
-You can view evaluation results, scores, and detailed reasons through the SDK or, more comprehensively, on the [Galtea platform](https://platform.galtea.ai/).
+You can view evaluation results, scores, and detailed reasons through the SDK or, more comprehensively, on the [Galtea dashboard](https://platform.galtea.ai/).
 
 ```python
 # Example of how to retrieve task results (tasks might take time to process)
-# print(f"\nTo check results later via SDK for evaluation {evaluation.id}:")
-# tasks = galtea.evaluation_tasks.list(evaluation.id)
-# if tasks:
-#     # Fetching details for the first task as an example
-#     # In a real scenario, you might want to wait or check status before fetching details
-#     # task_detail = galtea.evaluation_tasks.get(tasks[0].id) 
-#     # print(f"Example Task ID: {task_detail.id}, Score: {task_detail.score}, Reason: {task_detail.reason}")
-# else:
-#     print("No tasks found yet, or processing may still be ongoing.")
+print(f"\nTo check results later via SDK for evaluation {evaluation.id}:")
+tasks = galtea.evaluation_tasks.list(evaluation.id)
+# Print details for all tasks
+for task in tasks:
+    task_detail = galtea.evaluation_tasks.get(task.id)
+    print(f"Task ID: {task_detail.id}, Score: {task_detail.score}, Reason: {task_detail.reason}")
 
 print(f"\nVisit the Galtea platform to see detailed analytics for your product and evaluation {evaluation.id}.")
 ```
 
-For richer analysis, comparisons between versions, and visualizations, navigate to your product's page and its "Analytics" or "Evaluations" sections on the [Galtea platform](https://platform.galtea.ai/).
+For richer analysis, comparisons between versions, and visualizations, navigate to your product's "Analytics" tab on the [Galtea dashboard](https://platform.galtea.ai/).
 
 ## Next Steps
 
