--- a/sdk/examples/create-evaluation-with-custom-scores.mdx
+++ b/sdk/examples/create-evaluation-with-custom-scores.mdx
@@ -1,13 +1,13 @@
 ---
 title: 'Evaluate with your own scores'
-description: "Learn how to create and run fully-customized evaluations with custom metrics and self-calculated scores"
+description: "Learn how to create and run fully-customized evaluations self-calculated scores"
 icon: "vial-circle-check"
 iconType: "solid"
 ---
 
-[Evaluations](/concepts/product/evaluation) allow you to assess how well a specific [version](/concepts/product/version) of your [product](/concepts/product) performs against a set of [test cases](/concepts/product/test/case) by running individual [evaluation tasks](/concepts/product/evaluation/task).
-
 ## Creating an Evaluation
+
+[Evaluations](/concepts/product/evaluation) allow you to assess how well a specific [version](/concepts/product/version) of your [product](/concepts/product) performs against a set of [test cases](/concepts/product/test/case) by running individual [evaluation tasks](/concepts/product/evaluation/task).
 
 This is how to create an evaluation:
 
